--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "regex-blocks",
-  "version": "1.0.0",
-  "description": "Virtually build regular expressions, one block at a time.",
-  "main": "dist/bundle.js",
+  "version": "1.1.0",
+  "description": "Programatically build, edit, and compile regular expressions, one block at a time.",
+  "main": "./dist/bundle.js",
   "scripts": {
     "build": "webpack",
     "test": "karma start"
